fix title so that it doesn't get overlapped with page adjustments

--- a/public/css/daily.css
+++ b/public/css/daily.css
@@ -20,7 +20,7 @@
 .title {
     position: absolute;
     top: 10%;
-    left: 30%;
+    left: 50%;
     transform: translate(-50%, -50%);
     font-family: "Arial", Times, serif;
     font-style: oblique;
